--- a/ValidationData/TP/additional/publish_bkup.ipynb
+++ b/ValidationData/TP/additional/publish_bkup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -633,9 +633,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total solutions found: 4850\n"
+     ]
+    }
+   ],
    "source": [
     "from ortools.sat.python import cp_model\n",
     "\n",
@@ -657,7 +665,9 @@
     "    model = cp_model.CpModel()\n",
     "\n",
     "    # Define the variables (s1, s2, ..., s15)\n",
-    "    s = {i: model.NewIntVar(-9, 9, f's{i}') for i in range(1, 16)}\n",
+    "    s = {i: model.NewIntVar(-10, 10, f's{i}') for i in range(1, 15)}\n",
+    "\n",
+    "\n",
     "\n",
     "    \"\"\"\n",
     "    Rule 1\tScore 1 > Score 2 > Score 3 = 0 > Score 15\n",
@@ -670,11 +680,8 @@
     "    \"\"\"\n",
     "    # Add constraints\n",
     "    # Rule 1: \n",
-    "    # Most higheset score \n",
+    "    model.Add(s[3] == 0)                    #\n",
     "    model.Add(s[1] + s[10] + s[14] == 9)    #\n",
-    "    # Baseline constraints (s[15] + s[4] == 0)\n",
-    "    # model.Add(s[15] + s[4] == 0)            # \n",
-    "\n",
     "    model.Add(s[3] + s[11] + s[12] == 0)    #\n",
     "    # model.Add(s[15] + s[11] + s[12] == 0)    #\n",
     "    # model.Add(s[1] + s[7] < 9)\n",
@@ -682,36 +689,27 @@
     "    # model.Add(s[10] <= 7)\n",
     "    \n",
     "    # Knowledge-based\n",
-    "\n",
-    "    # 0 = s[15] < s[3] < s[2] s[1]\n",
-    "    model.Add(s[15] < 0)               #\n",
-    "    model.Add(s[15] < s[3])             #\n",
-    "    model.Add(s[3] < s[2])              #\n",
-    "    model.Add(s[2] < s[1])              #\n",
-    "\n",
-    "    # 0 = s[4] < s[5] < s[6] < s[7]\n",
-    "    model.Add(s[4] < 0)                #\n",
-    "    model.Add(s[5] <= 0)                #\n",
-    "    model.Add(s[4] < s[5])              #\n",
-    "    model.Add(s[5] < s[6])              #\n",
-    "    model.Add(s[6] < s[7])              #\n",
-    "\n",
-    "    # s[12] <= s[4] <= s[13] < s[14]\n",
-    "    model.Add(s[12] <= s[4])            #\n",
-    "    model.Add(s[4] <= s[13])            #\n",
-    "    model.Add(s[13] < s[14])            #\n",
-    "    model.Add(s[13] <= 0)              #\n",
-    "\n",
+    "    # Absolutes\n",
+    "    model.Add(s[2] >= 1)                #\n",
+    "    model.Add(s[1] - s[2] > 0)          #   s1 < s2\n",
+    "    # model.Add(s[15] <= 0)\n",
+    "    \n",
     "    # SpliceAI limitation\n",
     "    # Absolutes\n",
-    "    # model.Add(s[5] <= 0)              #\n",
+    "    model.Add(s[4] < 0)                 #\n",
+    "    model.Add(s[5] <= 0)                #\n",
     "    model.Add(s[6] >= 0)                #\n",
-    "\n",
+    "    # model.Add(s[7] >= 1)\n",
+    "    model.Add(s[12] < 0)                #\n",
+    "    model.Add(s[13] <= 0)               #\n",
+    "    model.Add(s[14] >= 0)               #\n",
     "    # Order\n",
     "    model.Add(s[5] - s[4] > 0)          #\n",
     "    model.Add(s[6] - s[5] > 0)          #\n",
     "    model.Add(s[7] - s[6] > 0)          #\n",
     "    model.Add(s[13] - s[12] > 0)        #\n",
+    "    model.Add(s[14] - s[13] > 0)        #\n",
+    "    model.Add(s[4] >= s[12])            #\n",
     "\n",
     "    # under limit\n",
     "    # model.Add(s[1] + s[10] + s[12] >= 0)\n",
@@ -722,604 +720,26 @@
     "    model.Add(s[9] >= s[7])             #\n",
     "    model.Add(s[8] - s[9] > 0)          #\n",
     "    model.Add(s[10] - s[8] > 0)         #\n",
-    "    model.Add(s[9] - s[11] >= 0)        #\n",
-    "    # model.Add(s[9] - s[11] > 0)       #\n",
+    "    model.Add(s[9] - s[11] >= 0)         #\n",
+    "    # model.Add(s[9] - s[11] > 0)         #\n",
     "\n",
-    "    # Create a solver and solve the model\n",
+    "\n",
+    "    # ソルバの設定と解の探索\n",
     "    solver = cp_model.CpSolver()\n",
-    "    solution_collector = SolutionCollector([s[i] for i in range(1, 16)])\n",
+    "    solution_collector = SolutionCollector([s[i] for i in range(1, 15)])\n",
     "    solver.SearchForAllSolutions(model, solution_collector)\n",
     "    \n",
-    "    # Return all solutions\n",
+    "    # 全ての解を返す\n",
     "    return solution_collector.GetAllSolutions()\n",
     "\n",
-    "# Find all solutions\n",
+    "# 解の計算\n",
     "all_solutions = find_all_solutions()\n",
     "print(f'Total solutions found: {len(all_solutions)}')\n",
     "\n",
-    "#Debug and confirm the solutions\n",
-    "for index, solution in enumerate(all_solutions):\n",
-    "    print(f'Solution {index + 1}: {solution}')\n",
+    "# Debug and confirm the solutions\n",
+    "# for index, solution in enumerate(all_solutions):\n",
+    "#     print(f'Solution {index + 1}: {solution}')\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -10,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -9,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -8,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -7,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -6,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -5,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -4,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -3,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -2,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 0,\n",
-       "  's12': -1,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -1,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -2,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -3,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -4,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -5,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -6,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -7,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -8,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -9,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -9,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -8,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -7,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -6,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -5,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -4,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -3,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -2,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -1,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -1,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -2,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -3,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -4,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -5,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -6,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -7,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -8,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -9,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 3,\n",
-       "  's12': -10,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 2,\n",
-       "  's12': -10,\n",
-       "  's13': 0,\n",
-       "  's14': 1},\n",
-       " {'s1': 3,\n",
-       "  's2': 2,\n",
-       "  's3': 1,\n",
-       "  's4': 0,\n",
-       "  's5': 1,\n",
-       "  's6': 2,\n",
-       "  's7': 3,\n",
-       "  's8': 4,\n",
-       "  's9': 3,\n",
-       "  's10': 5,\n",
-       "  's11': 1,\n",
-       "  's12': -10,\n",
-       "  's13': 0,\n",
-       "  's14': 1}]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_solutions"
    ]
   },
   {
