--- a/ValidationData/TP/additional/gnomad_all.ipynb
+++ b/ValidationData/TP/additional/gnomad_all.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,17 +173,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/12/22 11:29:49 [INFO   ] (__main__) - chr1\n",
+      "2024/12/22 11:32:59 [INFO   ] (__main__) - chr2\n",
+      "2024/12/22 11:34:54 [INFO   ] (__main__) - chr3\n",
+      "2024/12/22 11:36:10 [INFO   ] (__main__) - chr4\n",
+      "2024/12/22 11:36:45 [INFO   ] (__main__) - chr5\n",
+      "2024/12/22 11:37:27 [INFO   ] (__main__) - chr6\n",
+      "2024/12/22 11:38:28 [INFO   ] (__main__) - chr7\n",
+      "2024/12/22 11:39:19 [INFO   ] (__main__) - chr8\n",
+      "2024/12/22 11:39:48 [INFO   ] (__main__) - chr9\n",
+      "2024/12/22 11:40:25 [INFO   ] (__main__) - chr10\n",
+      "2024/12/22 11:41:04 [INFO   ] (__main__) - chr11\n",
+      "2024/12/22 11:42:27 [INFO   ] (__main__) - chr12\n",
+      "2024/12/22 11:43:31 [INFO   ] (__main__) - chr13\n",
+      "2024/12/22 11:43:39 [INFO   ] (__main__) - chr14\n",
+      "2024/12/22 11:44:07 [INFO   ] (__main__) - chr15\n",
+      "2024/12/22 11:44:34 [INFO   ] (__main__) - chr16\n",
+      "2024/12/22 11:45:18 [INFO   ] (__main__) - chr17\n",
+      "2024/12/22 11:46:31 [INFO   ] (__main__) - chr18\n",
+      "2024/12/22 11:46:39 [INFO   ] (__main__) - chr19\n",
+      "2024/12/22 11:48:01 [INFO   ] (__main__) - chr20\n",
+      "2024/12/22 11:48:18 [INFO   ] (__main__) - chr21\n",
+      "2024/12/22 11:48:23 [INFO   ] (__main__) - chr22\n",
+      "2024/12/22 11:48:36 [INFO   ] (__main__) - chrX\n",
+      "2024/12/22 11:48:51 [INFO   ] (__main__) - chrY\n"
+     ]
+    }
+   ],
    "source": [
     "## Parse VCF to simple input table\n",
     "chr_list = [str(i) for i in range(1, 23)] + ['X', 'Y']\n",
-    "# chr_list = 22\n",
     "\n",
     "for chr in chr_list:\n",
-    "    print(f\"Processing chr{chr}\")\n",
-    "    raw_vcf: str = f\"splai_vep_vcfs/gnomadv211/gnomad_chr{chr}.splai.vep.vcf\"\n",
+    "    logger.info(f\"chr{chr}\")\n",
+    "    raw_vcf: str = f\"variant_data_set_vcfs/gnomad_splai_maxent_pango_sq/gnomad.chr{chr}.splai.vep.maxent.loftee.pangolin.squirls.vcf.vcf\"\n",
+    "    fp = Path(raw_vcf)\n",
+    "    fp_stem, fp_dir = fp.stem, fp.parent\n",
     "\n",
     "    vcf = VCF(raw_vcf)\n",
     "    header = vcf.header_iter()\n",
@@ -197,6 +229,8 @@
     "                vep_cols_list = h['Description'].split('Format: ')[1].rstrip('\"').split('|')\n",
     "            elif h['ID'] == 'SpliceAI':\n",
     "                splai_cols_list = h['Description'].split('Format: ')[1].rstrip('\"').split('|')\n",
+    "            elif h['ID'] == 'Pangolin':\n",
+    "                pang_cols_list = h['Description'].split('Format: ')[1].rstrip('\"').split('|')\n",
     "            else:\n",
     "                pass\n",
     "\n",
@@ -206,17 +240,22 @@
     "    cols = [\n",
     "        'CHROM', 'POS', 'REF', 'ALT', 'GeneSymbol', 'SymbolSource', 'HGNC_ID', \n",
     "        'ENST', 'HGVSc', 'Consequence', 'EXON', 'INTRON', 'Strand',\n",
-    "        'DS_AG', 'DS_AL', 'DS_DG', 'DS_DL', 'DP_AG', 'DP_AL', 'DP_DG', 'DP_DL', 'maxsplai'\n",
+    "        'DS_AG', 'DS_AL', 'DS_DG', 'DS_DL', \n",
+    "        'DP_AG', 'DP_AL', 'DP_DG', 'DP_DL', 'maxsplai',\n",
+    "        'loftee', 'maxentscan_alt', 'maxentscan_diff', 'maxentscan_ref', \n",
+    "        'pang_gene', 'pang_pos_socre_1', 'pang_pos_score_loss', 'pang_warning', \n",
+    "        'maxpangolin', 'Squirls', \n",
     "    ]\n",
     "\n",
     "    df: pd.DataFrame = pd.DataFrame(columns=cols)\n",
     "    for v in VCF(raw_vcf):\n",
-    "\n",
-    "        if v.INFO.get('CSQ') is None:\n",
-    "            logger.warning(f\"[{v.CHROM}:{v.POS}] No CSQ found\")\n",
-    "            continue\n",
-    "        \n",
     "        vep: list = v.INFO.get('CSQ').split('|')\n",
+    "\n",
+    "        # Get HGVSc from VEP\n",
+    "        try:\n",
+    "            hgvsc = re.search('(?<=:).*',vep[vepidx['HGVSc']])[0]\n",
+    "        except TypeError:\n",
+    "            hgvsc = \"NA\"\n",
     "\n",
     "        # Get SpliceAI scores\n",
     "        if v.INFO.get('SpliceAI'):\n",
@@ -224,11 +263,17 @@
     "        else:\n",
     "            splai = ['NA'] * len(splai_cols_list)\n",
     "\n",
-    "        # Get HGVSc from VEP\n",
-    "        try:\n",
-    "            hgvsc = re.search('(?<=:).*',vep[vepidx['HGVSc']])[0]\n",
-    "        except TypeError:\n",
-    "            hgvsc = \"NA\"\n",
+    "        # Get Pangolin scores\n",
+    "        if v.INFO.get('Pangolin'):\n",
+    "            pangolin: list = v.INFO.get('Pangolin').split('|')\n",
+    "        else:\n",
+    "            pangolin = ['NA'] * len(pang_cols_list)\n",
+    "            \n",
+    "        # Get Squirls scores\n",
+    "        if v.INFO.get('SQUIRLS_SCORE'):\n",
+    "            squirls: float = v.INFO.get('SQUIRLS_SCORE')\n",
+    "        else:\n",
+    "            squirls = \"NA\"\n",
     "\n",
     "        # Convert strand to +/- \n",
     "        strand = lambda s: '+' if s == '1' else '-'\n",
@@ -242,28 +287,42 @@
     "            maxsplai: str = \"NA\"\n",
     "        maxsplai: float = max(ds_ag, ds_al, ds_dg, ds_dl)\n",
     "\n",
+    "        # Get Pangplin scores\n",
+    "        pang_gene: str = pangolin[0]\n",
+    "        pang_pos_score_gain: str = pangolin[1]\n",
+    "        pang_pos_score_loss: str = pangolin[2]\n",
+    "        pang_warning: str = pangolin[3]\n",
+    "        if pang_gene == 'NA':\n",
+    "            maxpangolin = \"NA\"\n",
+    "        else:\n",
+    "            maxpangolin = max(\n",
+    "\t            np.abs(float(pang_pos_score_gain.split(':')[1])), \n",
+    "                np.abs(float(pang_pos_score_loss.split(':')[1]))\n",
+    "\t            )\n",
+    "\n",
     "        # Add df row\n",
     "        df = pd.concat([df, pd.DataFrame([[\n",
     "            v.CHROM, v.POS, v.REF, v.ALT[0], \n",
-    "            vep[vepidx['SYMBOL']], vep[vepidx['SYMBOL_SOURCE']], vep[vepidx['HGNC_ID']], \n",
-    "            vep[vepidx['Feature']], hgvsc, vep[vepidx['Consequence']], \n",
+    "            vep[vepidx['SYMBOL']], vep[vepidx['SYMBOL_SOURCE']], \n",
+    "            vep[vepidx['HGNC_ID']], vep[vepidx['Feature']], hgvsc, \n",
+    "            vep[vepidx['Consequence']], \n",
     "            vep[vepidx['EXON']], vep[vepidx['INTRON']],\n",
     "            strand(vep[vepidx['STRAND']]), \n",
     "            ds_ag, ds_al, ds_dg, ds_dl,\n",
     "            splai[splaidx['DP_AG']], splai[splaidx['DP_AL']], \n",
     "            splai[splaidx['DP_DG']], splai[splaidx['DP_DL']],\n",
-    "            maxsplai\n",
-    "        ]], columns=cols)], ignore_index=True)\n",
+    "            maxsplai, vep[vepidx['LoF']], \n",
+    "            vep[vepidx['MaxEntScan_alt']], \n",
+    "            vep[vepidx['MaxEntScan_diff']], \n",
+    "            vep[vepidx['MaxEntScan_ref']],\n",
+    "            pang_gene, pang_pos_score_gain, pang_pos_score_loss, pang_warning,\n",
+    "            maxpangolin, squirls]],\n",
+    "            columns=cols)], ignore_index=True)\n",
+    "        \n",
+    "    df.drop_duplicates(inplace=True)\n",
+    "    df['ENST_Full'] = df.apply(posparser.fetch_enst_full, db=db, axis=1)\n",
     "\n",
-    "        # if hgvsc == \"NA\":\n",
-    "        #     logger.warning(f\"[{v.CHROM}:{v.POS}] HGVSc not found\")\n",
-    "        # if maxsplai == \"NA\":\n",
-    "        #     logger.warning(f\"[{v.CHROM}:{v.POS}] SpliceAI scores not found\")\n",
-    "\n",
-    "    # ALLELE|SYMBOL|DS_AG|DS_AL|DS_DG|DS_DL|DP_AG|DP_AL|DP_DG|DP_DL\n",
-    "    # CHROM, POS, REF, ALT, GeneSymbol, NCBI_ID, ENST, ExonIntronNumbers, FLAGS, SYMBOL_SOURCE|\n",
-    "\n",
-    "    df.to_pickle(f\"splai_vep_vcfs/gnomadv211/gnomad_chr{chr}.splai.vep.vcf.pkl\")"
+    "    df.to_pickle(f\"{fp_dir}/{fp_stem}.enst.pkl\")\n"
    ]
   },
   {
