--- a/notebooks/tsv2vcf.ipynb
+++ b/notebooks/tsv2vcf.ipynb
@@ -42,15 +42,8 @@
     "        writer.add_to_header(\n",
     "            f\"##contig=<ID={contig},length={len(fasta[contig])}>\"\n",
     "            )\n",
-    "    return writer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return writer\n",
+    "\n",
     "writer = add_contigs_from_series(df, writer, fasta)\n",
     "writer.write_header()\n",
     "\n",
@@ -65,11 +58,18 @@
     "\n",
     "writer.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nar",
+   "display_name": "gakui",
    "language": "python",
    "name": "python3"
   },
@@ -83,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
