--- a/ValidationData/TP/additional/hgmd_all.ipynb
+++ b/ValidationData/TP/additional/hgmd_all.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "[10046 rows x 33 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,121 +856,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/11/25 12:04:07 [INFO   ] (__main__) - Calculate the distance to the nearest splice site in intron variant...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15499/15499 [00:09<00:00, 1603.34it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/11/25 12:04:17 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "100%|██████████| 15499/15499 [00:12<00:00, 1201.86it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/11/25 12:04:30 [INFO   ] (__main__) - Annotating splicing information...\n",
-      "2024/11/25 12:04:30 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15499/15499 [00:01<00:00, 14030.57it/s]\n",
-      "100%|██████████| 15499/15499 [00:01<00:00, 13122.88it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/11/25 12:04:32 [INFO   ] (__main__) - Parsing SpliceAI results...\n",
-      "2024/11/25 12:04:32 [INFO   ] (__main__) - Annotating Exon/Intron position information...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "100%|██████████| 15499/15499 [00:13<00:00, 1128.07it/s]\n",
-      "100%|██████████| 15499/15499 [00:01<00:00, 11923.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/11/25 12:04:51 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
-      "2024/11/25 12:04:52 [INFO   ] (__main__) - Predicting CDS change...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15499/15499 [00:11<00:00, 1384.05it/s]\n",
-      "100%|██████████| 15499/15499 [00:00<00:00, 134653.30it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/11/25 12:05:04 [INFO   ] (__main__) - Annotating CCRs info...\n",
-      "2024/11/25 12:05:05 [INFO   ] (__main__) - Annotate CCR score\n"
-     ]
-    },
-    {
-     "ename": "OSError",
-     "evalue": "Cannot save file into a non-existent directory: 'splai_vep_vcfs/hgmd_dm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 185\u001b[0m\n\u001b[1;32m    182\u001b[0m df \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSymbolSource\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHGNC\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m    184\u001b[0m \u001b[38;5;66;03m# df.to_pickle(f'splai_vep_vcfs/hgmd_dm/all_DM_chr{chr}.splai.vep.nondel.enst.prescore.hgnconly.pkl')\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_pickle\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msplai_vep_vcfs/hgmd_dm/hgmd_dm.chr$\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[38;5;28;43mchr\u001b[39;49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.splai.vep.snv.vcf.enst.prescore.hgnconly.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    186\u001b[0m logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mComleted chr\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mchr\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/core/generic.py:2955\u001b[0m, in \u001b[0;36mNDFrame.to_pickle\u001b[0;34m(self, path, compression, protocol, storage_options)\u001b[0m\n\u001b[1;32m   2903\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2904\u001b[0m \u001b[38;5;124;03mPickle (serialize) object to file.\u001b[39;00m\n\u001b[1;32m   2905\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2951\u001b[0m \u001b[38;5;124;03m4    4    9\u001b[39;00m\n\u001b[1;32m   2952\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m  \u001b[38;5;66;03m# noqa: E501\u001b[39;00m\n\u001b[1;32m   2953\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpickle\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m to_pickle\n\u001b[0;32m-> 2955\u001b[0m \u001b[43mto_pickle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2956\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2957\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2958\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcompression\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2959\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprotocol\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprotocol\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2960\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2961\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/io/pickle.py:95\u001b[0m, in \u001b[0;36mto_pickle\u001b[0;34m(obj, filepath_or_buffer, compression, protocol, storage_options)\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m protocol \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     93\u001b[0m     protocol \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mHIGHEST_PROTOCOL\n\u001b[0;32m---> 95\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     96\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     97\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mwb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     98\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcompression\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     99\u001b[0m \u001b[43m    \u001b[49m\u001b[43mis_text\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    100\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    101\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m handles:\n\u001b[1;32m    102\u001b[0m     \u001b[38;5;66;03m# letting pickle write directly to the buffer is more memory-efficient\u001b[39;00m\n\u001b[1;32m    103\u001b[0m     pickle\u001b[38;5;241m.\u001b[39mdump(obj, handles\u001b[38;5;241m.\u001b[39mhandle, protocol\u001b[38;5;241m=\u001b[39mprotocol)\n",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/io/common.py:737\u001b[0m, in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    735\u001b[0m \u001b[38;5;66;03m# Only for write methods\u001b[39;00m\n\u001b[1;32m    736\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode \u001b[38;5;129;01mand\u001b[39;00m is_path:\n\u001b[0;32m--> 737\u001b[0m     \u001b[43mcheck_parent_directory\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    739\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m compression:\n\u001b[1;32m    740\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m compression \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mzstd\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    741\u001b[0m         \u001b[38;5;66;03m# compression libraries do not like an explicit text-mode\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/io/common.py:600\u001b[0m, in \u001b[0;36mcheck_parent_directory\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m    598\u001b[0m parent \u001b[38;5;241m=\u001b[39m Path(path)\u001b[38;5;241m.\u001b[39mparent\n\u001b[1;32m    599\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m parent\u001b[38;5;241m.\u001b[39mis_dir():\n\u001b[0;32m--> 600\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\u001b[38;5;124mrf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot save file into a non-existent directory: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparent\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mOSError\u001b[0m: Cannot save file into a non-existent directory: 'splai_vep_vcfs/hgmd_dm'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chr_list = [str(i) for i in range(1, 23)] + ['X', 'Y']\n",
     "# chr_list = ['22']\n",
     "# chr_list = ['1']\n",
-    "raw_vcf: str = f\"variant_data_set_vcfs/hgmd_splai_maxent_pango_sq/hgmd_dm.chr{chr}.splai.vep.maxent.loftee.snv.pangolin.squirls.vcf\"\n",
-    "\n",
-    "\n",
     "\n",
     "for chr in chr_list:\n",
     "    # df = pd.read_pickle(f'splai_vep_vcfs/hgmd_dm/all_DM_chr{chr}.splai.vep.nondel.vcf.enst.pkl')\n",
     "    # df = pd.read_pickle(f'splai_vep_vcfs/HGMD_vep_maxentscan_loftee/hgmd_dm.chr{chr}.splai.vep.maxent.loftee.snv.vcf.enst.pkl')\n",
-    "    df = pd.read_pickle(f\"variant_data_set_vcfs/hgmd_splai_maxent_pango_sq/hgmd_dm.chr{chr}.splai.vep.maxent.loftee.snv.pangolin.squirls.vcf\")\n",
+    "    df = pd.read_pickle(f\"variant_data_set_vcfs/hgmd_splai_maxent_pango_sq/hgmd_dm.chr{chr}.splai.vep.maxent.loftee.snv.pangolin.squirls.enst.pkl\")\n",
     "\n",
     "    df = df.fillna(\n",
     "        {'loftee': '.', 'maxentscan_alt': '.', \n",
@@ -1011,12 +906,12 @@
     "\n",
     "    #5.   Annotate ClinVar varaints interpretations\n",
     "    logger.info('Annotating ClinVar varaints interpretations...')\n",
-    "    clinvar_file = '../../../Resources/03_ClinVar/variant_summary.snv.grch37.germline.criteria.sort.bed.gz'\n",
-    "    tbx_clinvar = pysam.TabixFile(clinvar_file)\n",
+    "    clinvar_file = '../../../clinvar/Filtered_BCF_GRCh37_20241211-044124/clinvar_GRCh37.germline.nocoflicted.bcf.gz'\n",
+    "    cln_bcf = pysam.VariantFile(clinvar_file)\n",
     "    df['clinvar_same_pos'] = df.progress_apply(\n",
-    "        anno_clinvar.anno_same_pos_vars, tabixfile=tbx_clinvar, axis=1)\n",
+    "        anno_clinvar.anno_same_pos_vars, cln_bcf=cln_bcf, axis=1)\n",
     "    df['clinvar_same_motif'] = df.progress_apply(\n",
-    "        anno_clinvar.anno_same_motif_vars, tabixfile=tbx_clinvar, axis=1)\n",
+    "        anno_clinvar.anno_same_motif_vars, cln_bcf=cln_bcf, axis=1)\n",
     "\n",
     "    logger.info('Parsing SpliceAI results...')\n",
     "    logger.info('Annotating Exon/Intron position information...')\n",
@@ -1148,13 +1043,13 @@
     "    df = df[df['SymbolSource'] == 'HGNC']\n",
     "\n",
     "    # df.to_pickle(f'splai_vep_vcfs/hgmd_dm/all_DM_chr{chr}.splai.vep.nondel.enst.prescore.hgnconly.pkl')\n",
-    "    df.to_pickle(f'splai_vep_vcfs/HGMD_vep_maxentscan_loftee/hgmd_dm.chr{chr}.splai.vep.maxent.loftee.snv.vcf.enst.prescore.pkl')\n",
+    "    df.to_pickle(f\"variant_data_set_vcfs/hgmd_splai_maxent_pango_sq/hgmd_dm.chr{chr}.splai.vep.maxent.loftee.snv.pangolin.squirls.prescore.onlyhgnc.pkl\")\n",
     "    logger.info(f\"Comleted chr{chr}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,11 +1057,10 @@
     "df = pd.DataFrame()\n",
     "chr_list = [str(i) for i in range(1, 23)] + ['X', 'Y']\n",
     "for chr in chr_list:\n",
-    "    df = pd.concat([df, pd.read_pickle(f'splai_vep_vcfs/hgmd_dm/hgmd_dm.chr${chr}.splai.vep.snv.vcf.enst.prescore.hgnconly.pkl')])\n",
-    "\n",
+    "    df = pd.concat([df, pd.read_pickle(f\"variant_data_set_vcfs/hgmd_splai_maxent_pango_sq/hgmd_dm.chr{chr}.splai.vep.maxent.loftee.snv.pangolin.squirls.prescore.onlyhgnc.pkl\")])\n",
     "\n",
     "# df.to_pickle('splai_vep_vcfs/hgmd_dm/allchr.DM.splai.vep.nondel.enst.prescore.hgnconly.pkl')\n",
-    "df.to_pickle('splai_vep_vcfs/hgmd_dm/hgmd_dm.chrALL.splai.vep.snv.vcf.enst.prescore.hgnconly.pkl')"
+    "df.to_pickle('variant_data_set_vcfs/hgmd_all.prescore.onlyhgnc.pkl')"
    ]
   },
   {
