--- a/ValidationData/TP/additional/publish.ipynb
+++ b/ValidationData/TP/additional/publish.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,14 +757,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TP: 18432, TN: 102095\n",
+      "TP: 17258, TN: 94623\n",
       "Filtered out [Warning] ENST_with_Ver_not_available, TP: 17258, TN: 94623\n"
      ]
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,23 +842,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['\"X-128722136-C-A_\\'Likely_benign\\'\"', ' \"X-128722154-A-T_\\'Pathogenic\\'\"']"
+       "['\"18-19761401-G-T_\\'Likely_benign\\'\"',\n",
+       " ' \"18-19761406-G-C_\\'Likely_benign\\'\"',\n",
+       " ' \"18-19761408-T-C_\\'Likely_benign\\'\"']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "col_num = tp_train.columns.get_loc('clinvar_same_motif')\n",
-    "same_moti = tp_train.iat[5, col_num]\n",
+    "same_moti = tp_train.iat[2, col_num]\n",
     "same_moti.split(',')"
    ]
   },
@@ -914,10 +916,216 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pysam\n",
+    "def __remove_square_brackets(s: str) -> str:\n",
+    "    return s.replace(\"[\", \"\").replace(\"]\", \"\")\n",
+    "\n",
+    "def __remove_quotations(s: str) -> str:\n",
+    "    return s.replace(\"'\", \"\").replace('\"', '')\n",
+    "\n",
+    "\n",
+    "def anno_same_pos_vars(row, cln_bcf: pysam.VariantFile) -> str:\n",
+    "    query_chr: str = f\"{row['CHROM']}\"\n",
+    "    query_pos: int = int(row['POS'])\n",
+    "    query_ref: str = row['REF']\n",
+    "    query_alt: str = row['ALT']\n",
+    "    query_variant: str = f\"{query_chr}-{query_pos}-{query_ref}-{query_alt}\"\n",
+    "    query_start: int = query_pos - 1\n",
+    "    query_end: int = query_pos\n",
+    "    recs = cln_bcf.fetch(query_chr, query_start, query_end)\n",
+    "\n",
+    "    # main loop \n",
+    "    samepos = []\n",
+    "    while 1:\n",
+    "        try:\n",
+    "            rec = next(recs)\n",
+    "        except StopIteration:\n",
+    "            break\n",
+    "        else:\n",
+    "            if rec.alts is None:\n",
+    "                rec_alt: str = \".\"\n",
+    "            else:\n",
+    "                rec_alt: str = rec.alts[0]\n",
+    "            rec_id = f\"{rec.contig}-{rec.pos}-{rec.ref}-{rec_alt}\"\n",
+    "            if query_variant == rec_id:\n",
+    "                clnsigs: list = [x for x in rec.info[\"CLNSIG\"]]\n",
+    "                samepos.append(clnsigs)\n",
+    "            else:\n",
+    "                pass\n",
+    "    \n",
+    "    # Return the results\n",
+    "    if samepos == []:\n",
+    "        return \"No_ClinVar_info_found\"\n",
+    "    else:\n",
+    "        return __remove_square_brackets(str(samepos))\n",
+    "\n",
+    "\n",
+    "def _generate_query_pos(row) -> tuple:\n",
+    "    query_pos = int(row['POS'])\n",
+    "\n",
+    "    if row['SpliceType'] == 'Donor_int':\n",
+    "        if row['Strand'] == '+':\n",
+    "            query_start: int = query_pos - int(row['IntronDist']) - 2 - 1\n",
+    "            query_end: int = query_pos - int(row['IntronDist']) + 6\n",
+    "        elif row['Strand'] == '-':\n",
+    "            query_start: int = query_pos + int(row['IntronDist']) - 6 - 1\n",
+    "            query_end: int = query_pos + int(row['IntronDist']) + 2\n",
+    "        else:\n",
+    "            return 'unk_Strand',\n",
+    "\n",
+    "    elif row['SpliceType'] == 'Donor_ex':\n",
+    "        if row['Strand'] == '+':\n",
+    "            query_start: int = query_pos + int(row['exon_pos']) - 3 - 1\n",
+    "            query_end: int = query_pos + int(row['exon_pos']) + 5\n",
+    "        elif row['Strand'] == '-':\n",
+    "            query_start: int = query_pos - int(row['exon_pos']) - 5 - 1\n",
+    "            query_end: int = query_pos - int(row['exon_pos']) + 3\n",
+    "        else:\n",
+    "            return 'unk_Strand',\n",
+    "    \n",
+    "    elif row['SpliceType'] == 'Acceptor_int':\n",
+    "        if row['Strand'] == '+':\n",
+    "            query_start: int = query_pos + (- int(row['IntronDist'])) - 20 - 1\n",
+    "            query_end: int = query_pos + (- int(row['IntronDist'])) + 0\n",
+    "        elif row['Strand'] == '-':\n",
+    "            query_start: int = query_pos - (- int(row['IntronDist'])) - 0 - 1\n",
+    "            query_end: int = query_pos - (- int(row['IntronDist'])) + 20\n",
+    "        else:\n",
+    "            return 'unk_Strand',\n",
+    "    \n",
+    "    elif row['SpliceType'] == 'Acceptor_ex':\n",
+    "        if row['Strand'] == '+':\n",
+    "            query_start: int = query_pos - int(row['exon_pos']) - 19 - 1\n",
+    "            query_end: int = query_pos - int(row['exon_pos']) + 1\n",
+    "        elif row['Strand'] == '-':\n",
+    "            query_start: int = query_pos + int(row['exon_pos']) - 1 - 1\n",
+    "            query_end: int = query_pos + int(row['exon_pos']) + 19\n",
+    "        else:\n",
+    "            return 'unk_Strand',\n",
+    "        \n",
+    "    else:\n",
+    "        return 'unk_SpliceType',\n",
+    "    \n",
+    "    return str(row['CHROM']), query_start, query_end\n",
+    "\n",
+    "def anno_same_motif_vars(row, cln_bcf: pysam.VariantFile) -> str:\n",
+    "    region: tuple = _generate_query_pos(row)\n",
+    "    # print(f\"Query region: {region[0]}\")\n",
+    "\n",
+    "    if region[0] == 'unk_Strand':\n",
+    "        return 'unk_Strand'\n",
+    "    elif region[0] == 'unk_SpliceType':\n",
+    "        return 'unk_SpliceType'\n",
+    "    else:\n",
+    "        recs = cln_bcf.fetch(*region)\n",
+    "\n",
+    "    # Main loop\n",
+    "    samemotifs = []\n",
+    "    while 1:\n",
+    "        try:\n",
+    "            rec = next(recs)\n",
+    "        except StopIteration:\n",
+    "            break\n",
+    "        else:\n",
+    "            if rec.alts is None:\n",
+    "                rec_alt: str = \".\"\n",
+    "            else:\n",
+    "                rec_alt: str = rec.alts[0]\n",
+    "\n",
+    "            registered_var = f\"{rec.contig}-{rec.pos}-{rec.ref}-{rec_alt}\"\n",
+    "            clnsigs: list = [x for x in rec.info[\"CLNSIG\"]]\n",
+    "            samemotifs.append(f\"{registered_var}:{clnsigs}\")\n",
+    "\n",
+    "    if samemotifs == []:\n",
+    "        return \"No_ClinVar_info_found\"\n",
+    "    else:\n",
+    "        return __remove_quotations(__remove_square_brackets(str(samemotifs)))\n",
+    "\n",
+    "# def anno_same_motif_clinsig(row) -> str:\n",
+    "#     if row['clinvar_same_motif'] == 'No_ClinVar_info_found':\n",
+    "#         return \"No_ClinVar_info_found\"\n",
+    "#     else:\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cln_bcf = \"/home/utsu/Desktop/GitHub/nar/clinvar/Filtered_BCF_GRCh37_20241211-044124/clinvar_GRCh37.germline.nocoflicted.bcf.gz\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tp_train['same_motif_test']= tp_train.apply(anno_same_motif_vars, cln_bcf=pysam.VariantFile(cln_bcf), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tp_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = \"17-29556025-C-G:Pathogenic, 17-29556025-C-T:Likely_benign, 17-29556027-A-G:Pathogenic/Likely_pathogenic, 17-29556028-A-G:Pathogenic, 17-29556029-A-G:Pathogenic, 17-29556030-A-G:Pathogenic/Likely_pathogenic, 17-29556030-A-T:Likely_benign, 17-29556031-T-G:Pathogenic/Likely_pathogenic, 17-29556034-T-A:Pathogenic, 17-29556035-G-C:Likely_benign, 17-29556036-T-C:Likely_benign, 17-29556038-T-C:Likely_benign, 17-29556039-T-G:Likely_benign, 17-29556041-A-C:Pathogenic, 17-29556041-A-G:Pathogenic, 17-29556041-AG-A:Pathogenic, 17-29556042-G-A:Pathogenic, 17-29556042-G-C:Pathogenic/Likely_pathogenic, 17-29556042-G-T:Pathogenic, 17-29556043-GC-G:Pathogenic\"\n",
+    "x = \"No_ClinVar_info_found\"\n",
+    "\n",
+    "def extract_clinsigs(row) -> list:\n",
+    "    if row == \"No_ClinVar_info_found\":\n",
+    "        clinsgs = [\"No_ClinVar_info_found\"]\n",
+    "        return clinsgs \n",
+    "    else:\n",
+    "        clinsgs = [var_clinsig.split(':')[1] for var_clinsig in row.split(', ')]\n",
+    "        # return __remove_square_brackets(str(clinsgs))\n",
+    "        return clinsgs \n",
+    "    \n",
+    "tp_train['clinsigs'] = tp_train['same_motif_test'].apply(extract_clinsigs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "if \"Likely_benign\" in tp_train.iloc[2, tp_train.columns.get_loc('clinsigs')]:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "テストここまで -------------------"
+   ]
   },
   {
    "cell_type": "markdown",
